[BUGFIX] calendar items overlapping fixed

--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -7,6 +7,10 @@
     overflow: hidden; 
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     &__h1 {
         color: white;
@@ -15,8 +19,9 @@
     &__month {
         display: flex;
         justify-content: center;
+        width: 100%;
         height: 24px;
-        margin: 7px 0;
+        margin: 6px 0;
     }
     &__month > div {
         display: flex;
@@ -30,16 +35,17 @@
         grid-template-columns: repeat(7, minmax(0, 1fr));
         width: 189px;
         height: 26px;
+        height: 22px;
     }
 
     &__dates {
         display: grid;
-        // place-items: center;
         grid-template-columns: repeat(7, minmax(0, 1fr));
-        width: 188px;
+        width: 186px;
         height: 112px;
         font-size: 12px;
         cursor: pointer;
+        overflow: hidden;
         
         &__not-current-month {
             color: rgb(2,2,2, 0.4);
@@ -49,6 +55,10 @@
             background-size: cover;
         }
     
+    }
+    &__dates > div:hover {
+        background-color: #DDFFFD;
+        border-radius: 50%;
     }
     &__dates > div {
         display: flex;
